--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -469,6 +469,7 @@ CONFIG_HISI_IOMMU_LPAE=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_COMMON_RESET_HI6220=y
 CONFIG_PM_DEVFREQ=y
+CONFIG_HISI_DDR_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_MALI_MIDGARD=y
