--- a/arch/arm64/boot/dts/hisilicon/hi3660-hikey960.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi3660-hikey960.dts
@@ -37,6 +37,20 @@
 		stdout-path = "serial6:115200n8";
 	};
 
+	overlay_mgr {
+		compatible = "linux,overlay_manager";
+		hardware_cfg_neonkey {
+			overlay_0 {
+				fragment@0 {
+					target-path="/soc/spi@ffd68000/sensorhub@0";
+					__overlay__ {
+						status = "ok";
+					};
+				};
+			};
+		};
+	};
+
 	memory@0 {
 		device_type = "memory";
 		reg = <0x0 0x00400000 0x0 0xBFE00000>;
@@ -360,5 +374,36 @@
 		/* WL_IRQ, GPIO_179_WL_WAKEUP_AP */
 		interrupt-parent = <&gpio22>;
 		interrupts = <3 1>; /* IRQ_TYPE_EDGE_RISING */
+	};
+};
+
+&spi2 {
+	/* On Low speed expansion */
+	label = "LS-SPI0";
+	status = "okay";
+
+	sensorhub@0 {
+		compatible = "nanohub";
+		reg = <0>;
+		spi-max-frequency = <500000>;
+		spi-cpol;
+		spi-cpha;
+
+		sensorhub,nreset-gpio = <&gpio26 3 0>; /* Fake */
+		sensorhub,boot0-gpio = <&gpio26 2 0>;  /* Fake */
+		sensorhub,wakeup-gpio = <&gpio26 0 0>; /* Gpio_208 -> PB9 */
+		sensorhub,irq1-gpio = <&gpio26 1 0>;   /* Gpio_209 -> PB5 */
+		sensorhub,spi-cs-gpio = <&gpio27 2 0>;
+		sensorhub,bl-addr = <0x08000000>;
+		sensorhub,kernel-addr = <0x0800C000>;
+		sensorhub,shared-addr = <0x08040000>;
+		sensorhub,flash-banks = <0 0x08000000 0x04000>,
+					<3 0x0800C000 0x04000>,
+					<4 0x08010000 0x10000>,
+					<5 0x08020000 0x20000>,
+					<6 0x08040000 0x20000>,
+					<7 0x08060000 0x20000>;
+		sensorhub,num-flash-banks = <6>;
+		status = "disabled";
 	};
 };
